Put some work into fixing particle systems

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,18 +2,24 @@
 Modeling And Texturing Tut: Write a how-to blog post to codify
 the knowledge of how to make ships.
 
-
 ==================
-Alert Text: Why won't it display where it's supposed to?
-
-Try putting it into a box?
-
-Make a class for it?
-
-(make all of the HUD elements into classes?)
-
-(HUDWidget?)
-
+Disappearing Particle Systems:
+The Behavior:
+It appears that any time any particle system is disposed,
+they all quit working, including newly created ones.
+Things I've Tried:
+* Object.create(ParticleSystem) (before and after the Object.assign)
+* Giving each system a unique name
+* Manually doing Object.assign (ie iterating over stuff)
+Observations:
+They get init'd as started=true, stopped=true, but manually setting started=false
+seems to have no effect.
+Further Thoughts:
+I'd like a clean way to diff the objects before and after. JSON.stringify does
+not work, but maybe copy/pasting from the debugger, cleaning up the garbage,
+and alpha-sorting will allow a clean enough diff.
+If there's no difference that can be shown between the objects, I think it's
+time to make a forum post.
 
 ==================
 Shadows: https://doc.babylonjs.com/babylon101/shadows
