Pick up debris from asteroids
Added tiny asteroids which can be picked up. Right now every ship can pick them up,
but you could set that to 'false' in the prototype and add an upgrade that gives it
back. You could also make debris that ships drop when they explode - just use the
'drops' property of the ship.'

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,7 +2,31 @@
 Modeling And Texturing Tut: Write a how-to blog post to codify
 the knowledge of how to make ships.
 
-===============
-AI/ Turrets
-
+=================
+AI
 Add unit tests, figure out just how wrong the math is
+
+=================
+
+Colliders
+
+Colliders need not be all the same size. Would be best if they could be visualized on-screen
+
+=================
+
+Escorts:
+
+* Store customization of multiple ships
+
+* Select desired ship (escort or your ship) to upgrade in upgrade menu
+
+* Select where to assign ship in a modal in the buy menu
+
+* Select how to use ship when capturing 
+
+* Make sure escorts and fighters persist between hyperjumps
+
+* make sure escorts and fighters persist through saves
+
+
+
